--- a/client/public/index.html
+++ b/client/public/index.html
@@ -94,6 +94,7 @@
     </ons-page>
   </template>
 
+  <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/appJ.js"></script>
 </body>
 
